[metadata]
name = manimgl
version = 1.3.0
author = Grant Sanderson
author_email= grant@3blue1brown.com
description = Animation engine for explanatory math videos
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/3b1b/manim
project_urls =
    Bug Tracker = https://github.com/3b1b/manim/issues
    Documentation = https://3b1b.github.io/manim/
    Source Code = https://github.com/3b1b/manim
license = MIT

[options]
packages = find:
include_package_data=True
install_requires = 
    argparse
    colour
    numpy
    Pillow
    scipy
    sympy
    tqdm
    mapbox-earcut
    matplotlib
    moderngl
    moderngl_window
    skia-pathops
    pydub
    pygments
    pyyaml
    rich
    screeninfo
    pyreadline; sys_platform == 'win32'
    validators
    ipython
    PyOpenGL
    manimpango>=0.2.0,<0.4.0

[options.entry_points]
console_scripts =
    manimgl = manimlib.__main__:main
    manim-render = manimlib.__main__:main
